# synthetic-data

./: .gitignore  Dockerfile.dataproc  Dockerfile.dataproc.motor  LICENSE  README.md  dataproc_submit.sh  dataproc_submit_motor.sh  dcmotor_fleet_generator.py  dcmotor_generator.py  dcmotor_visualiser.ipynb  fleet_generator.py  main.py  output.ipynb  pyproject.toml  sample_generator.py  sample_visualiser.ipynb  sample_visualiser_executed.ipynb
doc/: fleet_generation.md
k8s/: Dockerfile.spark  motor-fleet-sparkapplication.yaml  pump-fleet-sparkapplication.yaml
