[project]
name = "synthetic-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipympl>=0.10.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "papermill>=2.7.0",
    "plotly>=6.6.0",
    "progpy>=1.7.1",
    "pyarrow>=23.0.1",
    "scipy>=1.11.0",
    "tqdm>=4.60.0",
]
